[package]
name = "discord-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

warp = "0.3.1"

juniper = "0.15.7"
juniper_warp = "0.7.0"

env_logger = "0.9.0"
log = "0.4.14"

reqwest = { version = "0.11", features = ["rustls-tls"] }